apps/desktop/styles/WindowContainer.module.css
/* TODO: Fix Z-index issues, set it to variables, or ranges w.e. */
.container {
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
  padding: 3px;
  background-color: silver;
  box-shadow: inset -1px -1px #0a0a0a,inset 1px 1px #c8c8c8,inset -2px -2px grey,inset 2px 2px #fff;
}

/* TODO: Fix the Z-index mess that is around here :^) */
.contentContainer {
  position: relative;
  display: flex;
  flex-flow: column;
  width: 100%;
  height: 100%;
}

.contentContainer.focused {
  z-index: 101;
}

.resizable {
  position: absolute;
  top: -5px;
  left: -5px;
  width: calc(100% + 10px);
  height: calc(100% + 10px);
  z-index: 100;
  user-select: none;
}

.focusLayer {
  position: absolute;
  width: 100%;
  height: 100%;
  display: block;
  top: 0;
  left: 0;
  z-index: 100; /* TODO: Make this dynamic */
}

.focused.header {
  background-color: aquamarine;
}

.header {
  background-color: hotpink;
  flex: 0 1 auto;

  height: 30px;
  line-height: 2em;

  user-select: none;

  display: flex;
  flex-direction: row;

  padding: 0 6px;

  z-index: 9999;
}

.header > span {
  pointer-events: none;
}

.content {
  box-sizing: content-box;
  flex: 1 1 auto;
  margin: 3px;
}

.resizingMask, .draggingMask {
  position: fixed;
  top: 0;
  left: 0;

  z-index: 9999;
  user-select: none;

  width: 100vw;
  height: 100vh;
}

.headerTitle {
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

.headerButtons {
  display: inline-block;
  flex-shrink: 0;
}

.headerButtons button {
  margin-left: 1px;
}

